lab06 ConfigFile se carga configuraciones de un json

--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>{Los lugares favoritos de Stephanie Vidal}</h1>
+    <h1>Los lugares favoritos de Stephanie Vidal</h1>
     <div class="body">
         <div class="lugar1">
             <h2>Cuahutla Morelos</h2>
