--- a/static/index.html
+++ b/static/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./css/site.css"
+    <link 
+    rel="stylesheet"
+    href="./vendor/sweetalert/dist/sweetalert.css"
+    <link rel="stylesheet" href="./css/site.css">
     <title>Mis lugares favoritos</title>
 </head>
 <body onload="hola()">
@@ -36,6 +39,7 @@
     <div class="selector">
         <button onclick="changeBkgColor()">CAMBIAR FONDO</button>
     <!-- Seccion de Scripts -->
+    <script src="./vendor/sweetalert/dist/sweetalert.min.js"></script>
     <script src="./js/site/js"></script>
 </body>
 </html>
